--- a/Photorama/Base.lproj/Main.storyboard
+++ b/Photorama/Base.lproj/Main.storyboard
@@ -18,33 +18,64 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bQZ-1u-HZF">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Rvf-ZA-KEy">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jIh-np-aPy">
-                                <rect key="frame" x="161" y="506" width="53" height="44"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="displayP3"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                <state key="normal" title="Next"/>
-                                <connections>
-                                    <action selector="nextImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yiV-Oq-lda"/>
-                                </connections>
-                            </button>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="RW9-nB-8L4">
+                                    <size key="itemSize" width="90" height="90"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="2" minY="2" maxX="2" maxY="2"/>
+                                </collectionViewFlowLayout>
+                                <imageView key="backgroundView" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="IwE-Uy-wvY">
+                                    <rect key="frame" x="0.0" y="-64" width="375" height="667"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                </imageView>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCollectionViewCell" id="w5b-X9-osa" customClass="PhotoCollectionViewCell" customModule="Photorama" customModuleProvider="target">
+                                        <rect key="frame" x="2" y="2" width="90" height="90"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PWq-71-KOG">
+                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                </imageView>
+                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="9x3-yP-wol">
+                                                    <rect key="frame" x="35" y="35" width="20" height="20"/>
+                                                </activityIndicatorView>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstItem="PWq-71-KOG" firstAttribute="top" secondItem="w5b-X9-osa" secondAttribute="top" id="4qe-5e-jvy"/>
+                                            <constraint firstAttribute="bottom" secondItem="PWq-71-KOG" secondAttribute="bottom" id="GvB-zT-tBo"/>
+                                            <constraint firstItem="9x3-yP-wol" firstAttribute="centerY" secondItem="w5b-X9-osa" secondAttribute="centerY" id="K1O-le-v0o"/>
+                                            <constraint firstItem="PWq-71-KOG" firstAttribute="leading" secondItem="w5b-X9-osa" secondAttribute="leading" id="NYd-qI-oUI"/>
+                                            <constraint firstAttribute="trailing" secondItem="PWq-71-KOG" secondAttribute="trailing" id="mj7-RI-a6t"/>
+                                            <constraint firstItem="9x3-yP-wol" firstAttribute="centerX" secondItem="w5b-X9-osa" secondAttribute="centerX" id="v7I-jD-Eat"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="PWq-71-KOG" id="2Gs-y6-dR2"/>
+                                            <outlet property="spinner" destination="9x3-yP-wol" id="7lj-zK-5uy"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="jIh-np-aPy" secondAttribute="bottom" constant="117" id="0ih-49-eCn"/>
-                            <constraint firstItem="bQZ-1u-HZF" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="9xG-2f-qj8"/>
-                            <constraint firstItem="jIh-np-aPy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MmC-AH-O7k"/>
-                            <constraint firstItem="bQZ-1u-HZF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="o8V-Ao-8dc"/>
-                            <constraint firstItem="bQZ-1u-HZF" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="s3z-2M-BB8"/>
-                            <constraint firstItem="bQZ-1u-HZF" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="yv7-Aa-Bej"/>
+                            <constraint firstAttribute="bottom" secondItem="Rvf-ZA-KEy" secondAttribute="bottom" id="TUR-Ao-Xds"/>
+                            <constraint firstItem="Rvf-ZA-KEy" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="VPF-nt-goK"/>
+                            <constraint firstAttribute="trailing" secondItem="Rvf-ZA-KEy" secondAttribute="trailing" id="enB-mE-d2q"/>
+                            <constraint firstItem="Rvf-ZA-KEy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="sQ7-VC-x1h"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Photorama" id="m7Z-2r-gdk"/>
                     <connections>
-                        <outlet property="imageView" destination="bQZ-1u-HZF" id="tLz-Pd-LwD"/>
+                        <outlet property="collectionView" destination="Rvf-ZA-KEy" id="zfw-Vq-Tg2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
